# casely-qa-skill

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  marketplace.json  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: hosted-web-version.md
skill/casely/: SKILL.md
