[project]
name = "casely-qa-skill"
version = "1.5.0"
description = "Intelligent QA assistant that automates writing test cases from project documentation."
authors = [{ name = "John Wayne" }]
dependencies = [
    "docling>=2.0.0",
    "openpyxl>=3.1.0",
]
requires-python = ">=3.10"

[tool.uv]
managed = true
